@@ -206,6 +206,7 @@ install-udeb: build
 	dh_link -pconsole-setup-udeb usr/bin/ckbcomp-mini usr/bin/ckbcomp
 	dh_install -pconsole-setup-udeb setupcon bin
 	dh_install -p console-setup-udeb debian/console-setup.config usr/share/console-setup-mini
+	chmod a+x debian/console-setup-udeb/usr/share/console-setup-mini/console-setup.config
 	dh_installdirs -p console-setup-udeb lib/debian-installer.d
 	install -m0644 debian/console-setup-udeb.startup \
 		debian/console-setup-udeb/lib/debian-installer.d/S55console-setup
